# aiogram-template

./: .env.dist  .gitignore  pyproject.toml
app/: __main__.py
app/handlers/: __init__.py
app/handlers/private/: start.py
app/middlewares/: __init__.py
app/models/: base.py  user.py
app/utils/: broadcaster.py
