[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["0Kit <kostyajog@mail.ru>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "2.11.2"
environs = "9.3.0"
loguru = "0.5.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
